--- a/client/html/Student schedule.html
+++ b/client/html/Student schedule.html
@@ -1,8 +1,9 @@
 <!--
 Student schedule:
     1. Show all tutor
-    2. User chooses a tutor
-    3. Show tutor's schedule
-    4. User makes schedule with tutor
-    5. Notify tutor
+    2. User can search for tutor (name, specialty)
+    3. User chooses a tutor
+    4. Show tutor's schedule
+    5. User makes schedule with tutor
+    6. Notify tutor
 -->
