--- a/client/html/tutor_schedule_list.html
+++ b/client/html/tutor_schedule_list.html
@@ -122,7 +122,12 @@
             background:#f5f5f5;
             color:#333;
             font-weight:600;
+            cursor:pointer;
+            display:inline-block;
+            text-decoration:none;
+            text-align:center;
         }
+        .btn:hover { background:#eee; }
 
         .info-bar {
             background:#fff;
@@ -200,7 +205,7 @@
 
                 <div class="footer-actions" aria-hidden="true">
                     <button class="btn" type="button">Trang chính</button>
-                    <button class="btn" type="button">Đăng ký</button>
+                    <a class="btn" href="Tutor schedule.html" role="button">Đăng ký</a>
                     <button class="btn" type="button">Chỉnh sửa</button>
                 </div>
             </div>
