--- a/client/html/tutor_schedule_list.html
+++ b/client/html/tutor_schedule_list.html
@@ -196,7 +196,13 @@
                     </thead>
                     <tbody id="tutor-session-list">
                         <tr class="empty-row">
-                            <td colspan="7" style="text-align:center; padding:12px; color:#666;">Chưa có buổi học nào.</td>
+                            <td style="text-align:center; color:#666;">----</td>
+                            <td style="text-align:center; color:#666;">----</td>
+                            <td style="text-align:center; color:#666;">----</td>
+                            <td style="text-align:center; color:#666;">----</td>
+                            <td style="text-align:center; color:#666;">----</td>
+                            <td style="text-align:center; color:#666;">----</td>
+                            <td style="text-align:center; color:#666;">----</td>
                         </tr>
                     </tbody>
                 </table>
